fix: Update CORS configuration to allow credentials with wildcard origins
- Change setAllowedOrigins to setAllowedOriginPatterns
- Enable setAllowCredentials for JWT token support
- Add additional exposed headers for better compatibility
- Fix Swagger UI CORS error on Railway deployment

This resolves the 'Failed to fetch' error in Swagger UI by properly
configuring CORS to work with JWT authentication in production.